# mcp-servers

./: .gitignore  README.md  claude_desktop_config.json  claude_desktop_config_local.json
app-testing-assistant/: ARCHITECTURE.md  README.md  main.py  mcp-install.sh  mcp-run-dev.sh  pyproject.toml
app-testing-assistant/app_testing_assistant/: __init__.py  main.py
baker-virtual-assistant/: ARCHITECTURE.md  client.py  client_openai.py  main.py  mcp-install.sh  mcp-run-dev.sh  pyproject.toml  run-client-openai.sh  run-client.sh
baker-virtual-assistant/baker_virtual_assistant/: __init__.py  main.py
baker-virtual-assistant/prompts/: create-mcp-client-openai.md  create-mcp-client.md  create-mcp-server-prompt-for-baker-assistant.md  create-mcp-server-resources-for-baker-assistant.md  setup-main-to-run-mcp-server.md
hello-world/: README.md  client.py  example-claude_desktop_config.json  main.py  mcp-install.sh  mcp-run-dev.sh  pyproject.toml  run-client.sh
hello-world/hello_world/: __init__.py  main.py
notes-organizer/: ARCHITECTURE.md  MANIFEST.in  README.md  client.py  example-claude_desktop_config.json  main.py  mcp-install.sh  mcp-run-dev.sh  pyproject.toml  run-client.sh  test_tools.py
notes-organizer/notes/: AI-And-Machine-Learning.md  Data-Engineering.md  Deep-Learning-And-Neural-Networks.md  Different-Types-Of-Databases.md  MCP.md  Overfitting-And-Underfitting-In-ML.md  Steps-In-Machine-Learning.md  Types-Of-Data-In-ML.md  Types-Of-Evaluation-In-ML.md  Types-Of-Machine-Learning.md
notes-organizer/notes_organizer/: __init__.py  main.py
notes-organizer/prompts/: create-mcp-client.md  create-mcp-server.md  new-tool-create-note.md
openai-rag-vector-store/: README.md  main.py  mcp-install.sh  mcp-run-dev.sh  pyproject.toml
openai-rag-vector-store/openai_rag_vector_store/: __init__.py  main.py
openai-rag-vector-store/prompts/: bug-store-search-query-producing-error.md  create-mcp-server.md  enhancement-to-store-query-results.md
