[project]
name = "notes-organizer"
version = "0.1.0"
description = "MCP Server for organizing and searching personal notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.23.1",
]

[tool.setuptools]
packages = ["notes_organizer"]

[project.scripts]
notes-organizer = "notes_organizer.main:main"
