[project]
name = "openai-rag-vector-store"
version = "0.1.0"
description = "MCP Server implementing RAG with OpenAI Vector Store for search history management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
openai-rag-vector-store = "openai_rag_vector_store.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openai_rag_vector_store*"]
